# suins-contracts

./: .eslintrc.cjs  .gitignore  .prettierignore  .typos.toml  Cargo.toml  LICENSE  Move.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: calm-mails-double.md  chatty-suns-scream.md  clean-olives-enjoy.md  config.json  curly-peas-sleep.md  famous-avocados-act.md  fifty-olives-act.md  flat-turkeys-begin.md  fluffy-lies-rest.md  grumpy-ears-tie.md  lovely-apples-bathe.md  many-cats-laugh.md  metal-countries-joke.md  metal-grapes-flow.md  new-needles-guess.md  orange-plants-drum.md  rude-eagles-scream.md  ten-pants-glow.md  three-geckos-build.md  three-olives-listen.md  tough-lemons-design.md  twenty-flowers-type.md  two-islands-lick.md
.circleci/: config.yml
.github/: auto_assign.yml  dependabot.yml
.github/workflows/: dependabot_review.yaml  doc_test.yml  move-formatter.yml  move_test.yml  release.yml  sdk_test.yml  suins-build-tx.yaml  suins-combine-execute.yaml  test.yaml  test.yml
architecture/: Base.md
contracts/: Move.toml  todo.md
contracts-v2/: Move.toml
contracts-v2/sources/: _controller.move  _registrar.move  controller.move  name_data.move  nft_policy.move  promotion.move
contracts/sources/: _controller.move  admin.move  auction.move  coin_tracker.move  coin_util.move  config.move  configuration.move  constants.move  controller.move  converter.move  domain.move  name_data.move  name_record.move  nft_policy.move  promotion.move  registrar.move  registration_nft.move  registry.move  remove_later.move  renew.move  string_utils.move  suins.move  suins_registration.move  update_image.move  validator.move
contracts/tests/: auction_tests.move  controller_tests.move  day1_nft_tests.move  register_tests.move  renew_tests.move
docker/suins-indexer/: Dockerfile  build.sh  entry.sh
docog/: README.md  next.config.js  tailwind.config.js  theme.config.jsx
docog/components/: nav.js
docog/pages/: _app.js  _document.js  node-operator.mdx
docog/public/: suins.css
docs/: README.md  admin.md  auction.md  auction_contract.md  base_registrar.md  base_registry.md  coin_util.md  configuration.md  constants.md  controller.md  converter.md  emoji.md  name_record.md  registry.md  remove_later.md  resolver.md  reverse_registrar.md
documentation/: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  theme.config.jsx  vercel.json
documentation/.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  (+1 more)
indexer/: Cargo.toml  docker-compose.yml
indexer/migrations/2024-01-29-122521_indexes/: down.sql  up.sql
indexer/migrations/2025-06-19-000004_auction_complete_schema/: down.sql  up.sql
indexer/migrations/2025-07-10-135005_auction_offers/: down.sql  up.sql
indexer/migrations/2025-07-15-105646_auction_events/: down.sql  up.sql
indexer/migrations/2025-10-10-134741_add_token_to_auctions/: down.sql  up.sql
indexer/migrations/2025-10-14-121128_add_reserve_price_to_auctions/: down.sql  up.sql
indexer/migrations/2025-10-14-133822_add_set_seal_config_table/: down.sql  up.sql
indexer/migrations/2025-11-25-133727_auction_contract_tables/: down.sql  up.sql
indexer/migrations/2026-01-20-071322_user_subscriptions/: down.sql  up.sql
indexer/migrations/2026-02-09-120000_unified_activity/: down.sql  up.sql
indexer/migrations/2026-02-09-193247_create_domains_marketplace_table/: down.sql  up.sql
indexer/src/: events.rs  lib.rs  main.rs  models.rs  schema.rs
indexer/src/handlers/: auctions_handler.rs  domain_handler.rs  listings_handler.rs  mod.rs  offer_events_handler.rs  offers_handler.rs
indexer/tests/: auction_events_tests.rs  suins_data_tests.rs
indexer/tests/checkpoints/process_284201660_checkpoint/: 284201660.chk
indexer/tests/checkpoints/process_284204878_checkpoint/: 284204878.chk
indexer/tests/checkpoints/process_284214191_checkpoint/: 284214191.chk
indexer/tests/checkpoints/process_284219783_checkpoint/: 284219783.chk
indexer/tests/checkpoints/process_284221405_checkpoint/: 284221405.chk
indexer/tests/checkpoints/process_284221705_checkpoint/: 284221705.chk
indexer/tests/checkpoints/process_284306978_checkpoint/: 284306978.chk
indexer/tests/checkpoints/process_285250134_checkpoint/: 285250134.chk
indexer/tests/checkpoints/process_285250163_checkpoint/: 285250163.chk
indexer/tests/checkpoints/process_288143645_checkpoint/: 288143645.chk
indexer/tests/snapshots/: auction_events_tests__process_284204878_checkpoint__set_seal_config.snap  auction_events_tests__process_284214191_checkpoint__auctions.snap  auction_events_tests__process_284221705_bid_placed__auctions.snap  auction_events_tests__process_284221705_bid_placed__bids.snap  auction_events_tests__process_285250134_checkpoint__listings.snap  auction_events_tests__process_285250163_listing_cancelled__listings.snap  suins_data_tests__process_22279187_checkpoint__domains.snap  suins_data_tests__process_22279365_checkpoint__domains.snap  suins_data_tests__process_22279496_checkpoint__domains.snap  suins_data_tests__process_22279944_checkpoint__domains.snap  suins_data_tests__process_22280030_checkpoint__domains.snap
move-docs/: auction.md  config.md  constants.md  domain.md  free_claims.md  house.md  managed.md  registration_nft.md  suins.md  update_image.md
resources/: Move.toml
scripts/: .env.local  .env.testnet.local  .eslintrc.cjs  .eslintrc.js  .publish.res.json  Dockerfile  README.md  client.yaml  docgen.sh  entrypoint.sh  entrypoint.sh~Stashed changes  functions.sh  local-setup.ts  owned-objects.json  package.json  pnpm-lock.yaml  prettier.config.js  price_feed_details.txt  price_feed_ids.txt  publish-denylist.sh  publish-extras.sh  publish.sh  published_testnet_testversion.json  test-local.sh  test-pr-356.sh  test.ts  tsconfig.json
sdk/: CHANGELOG.md  README.md  information.md  package.json  pnpm-lock.yaml  tsconfig.json
sources/: chat.move  registry.move
suins-sdk/: package.json  pnpm-lock.yaml  tsconfig.json
tests/: chat_tests.move  registry_tests.move
(+473 files in other folders)
