[package]
name = "suins-indexer"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio = "1.47.1"
tokio-util = "0.7.16"
async-trait = "0.1.88"
futures = "0.3.31"
anyhow = "1.0.98"
serde = "1.0.219"
serde_json = "1.0.140"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
bcs = "0.1.6"
tempfile = "3.20.0"
log = "0.4"

sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }
sui-name-service = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }
sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }
sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }
prometheus = "0.13.4"

clap = { version = "4.5.37", features = ["env"] }
diesel = { version = "2.2.7", features = [
    "postgres",
    "uuid",
    "chrono",
    "serde_json",
    "numeric",
] }
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"] }
diesel_migrations = "2.2.0"
url = "2.5.4"

[dev-dependencies]
sui-storage = { git = "https://github.com/MystenLabs/sui.git", rev = "83e72a664e8853ecc316efd70a62762a07d04177" }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
insta = { version = "1.43.1", features = ["json"] }
chrono = "0.4.39"

[[bin]]
name = "suins-indexer"
path = "src/main.rs"
